--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ziying's Personal Website
-description: Amateaur
+description: ""
 baseurl: "" # for GitHub Pages, leave empty
 url: "https://letterhead9600.github.io" # replace with your actual GitHub username
 
